--- a/gnome-base/gail/ChangeLog
+++ b/gnome-base/gail/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/gail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gail/ChangeLog,v 1.2 2002/06/04 09:24:44 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gail/ChangeLog,v 1.3 2002/06/05 22:33:52 stroke Exp $
+
+*gail-0.15 (06 Jun 2002)
+  
+  06 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> gail-0.15.ebuild:
+
+  New version
 
 *gail-0.13-r1 (04 Jun 2002)
 
