--- a/media-libs/sgi-oss-glu/ChangeLog
+++ b/media-libs/sgi-oss-glu/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for media-libs/sgi-oss-glu
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-libs/sgi-oss-glu/ChangeLog,v 1.1 2002/02/01 21:53:31 gbevin Exp $
-
+# $Header: /var/cvsroot/gentoo-x86/media-libs/sgi-oss-glu/ChangeLog,v 1.2 2002/06/06 00:19:59 peitolm Exp $
+* sgi-oss-glu-1.3 06 Jun 2002
+  05 Jun 2002; C.Morey <peitolm@gentoo.org>
+  
+  renamed ebuild from oss-opengl-glu-1.3 to sgi-oss-glu-1.3
+  
 *oss-opengl-glu-1.3 (1 Feb 2002)
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
