--- a/net-mail/mailfilter/ChangeLog
+++ b/net-mail/mailfilter/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for net-mail/mailfilter
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/mailfilter/ChangeLog,v 1.2 2002/04/27 23:34:20 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/mailfilter/ChangeLog,v 1.3 2002/06/06 05:50:20 rphillips Exp $
 
+*mailfilter-0.4.0 (5 June 2002)
+
+  5 June 2002; Ryan Phillips <rphillips@gentoo.org> mailfilter-0.4.0.ebuild :
+
+  Updated submitted by mike polniak <mikpolniak at adelphia.net>
+  
 *mailfilter-0.3.1 (10 Feb 2002)
 
   10 Feb 2002; mike polniak <mikpolniak@adelphia.net> mailfilter-0.3.1.ebuild
