--- a/dev-util/ebuilder/ChangeLog
+++ b/dev-util/ebuilder/ChangeLog
@@ -1,9 +1,15 @@
 # ChangeLog for dev-util/ebuilder
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-util/ebuilder/ChangeLog,v 1.3 2002/05/16 21:42:16 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/ebuilder/ChangeLog,v 1.4 2002/06/06 08:37:48 george Exp $
 
 *ebuilder-0.4-r1 (06 May 2002)
 
+  05 June 2002; George Shapovalov <george@gentoo.org> files/digest-ebuilder-0.4-r1 :
+
+  Looks like either archive was changed or digest file got "corrupted" (see #3208).
+  Updated digest file.
+  
+  
   06 May 2002; Zach Forrest <zach@disinformation.ca> ebuilder, experted.ebuild, beginner.ebuild :
 
   Thanks to Karl T for the great feedback and suggestions. (I'll get to
@@ -23,7 +29,7 @@
 
   A revision number can now be added to the package name.
 
-  Changed the fourth line in the ebuilds to "$Header: /var/cvsroot/gentoo-x86/dev-util/ebuilder/ChangeLog,v 1.3 2002/05/16 21:42:16 karltk Exp $".
+  Changed the fourth line in the ebuilds to "$Header: /var/cvsroot/gentoo-x86/dev-util/ebuilder/ChangeLog,v 1.4 2002/06/06 08:37:48 george Exp $".
 
 
 *ebuilder-0.3 (04 May 2002)
