--- a/net-www/galeon/ChangeLog
+++ b/net-www/galeon/ChangeLog
@@ -1,8 +1,10 @@
 # ChangeLog for net-www/galeon
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/galeon/ChangeLog,v 1.13 2002/06/05 17:10:10 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/galeon/ChangeLog,v 1.14 2002/06/06 20:16:22 azarah Exp $
 
-
+*galeon-1.2.3-r2.ebuild (06 Jun 2002)
+  06 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
+  Update to use mozilla-1.0-r1 and up.
 
 *galeon-1.2.3-r1 (05 Jun 2002)
   05 Jun 2002; Spider <spider@gentoo.org> galeon-1.2.3-r1.ebuild :
