--- a/net-misc/neon/ChangeLog
+++ b/net-misc/neon/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/neon
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.3 2002/03/03 09:26:45 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.4 2002/06/06 20:55:18 stroke Exp $
+
+*neon-0.21.1 (06 Jun 2002)
+
+  06 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> neon-0.21.1.ebuild:
+  
+  new version
 
 *neon-0.19.2 (26 Feb 2002)
 
