--- a/app-misc/xscreensaver/ChangeLog
+++ b/app-misc/xscreensaver/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-misc/xscreensaver
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/xscreensaver/ChangeLog,v 1.10 2002/06/05 05:13:57 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/xscreensaver/ChangeLog,v 1.11 2002/06/06 22:19:53 seemant Exp $
+
+*xscreensaver-4.04.2-r1 (6 Jun 2002)
+
+  6 Jun 2002; Seemant Kulleen <seemant@gentoo.org>
+  xscreensaver-4.04.2-r1.ebuild files/digest-xscreensaver-4.04.2-r1 :
+
+  NLS fixes.  It'll now compile :)
 
 *xscreensaver-4.04.2 (4 Jun 2002)
 
