--- a/net-mail/gotmail/ChangeLog
+++ b/net-mail/gotmail/ChangeLog
@@ -1,18 +1,25 @@
 # ChangeLog for net-mail/gotmail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/gotmail/ChangeLog,v 1.2 2002/05/11 18:37:58 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/gotmail/ChangeLog,v 1.3 2002/06/07 02:34:09 woodchip Exp $
+
+*gotmail-0.7.1 (6 Jun 2002)
+
+  6 Jun 2002; Donny Davies <woodchip@gentoo.org> :
+
+  Update to latest; few fixes to accomodate new upstream maintainer.
+  Close #2703.
 
 *gotmail-0.6.6.7 (11 May 2002)
 
-  11 May 2002; Grant Goodyear <g2boojum@gentoo.org> :
-  
+  11 May 2002; Grant Goodyear <g2boojum@gentoo.org> :  
+
   New version.  It looks like debian is now maintaining the base
   package.
 
 *gotmail-0.6.6 (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
+  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog : 
+ 
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
   comments should well explained and written in clean English. The details about
