--- a/x11-misc/wmalms/ChangeLog
+++ b/x11-misc/wmalms/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for x11-misc/wmalms
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/wmalms/ChangeLog,v 1.1 2002/06/03 21:25:04 lostlogic Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/wmalms/ChangeLog,v 1.2 2002/06/07 03:43:03 lostlogic Exp $
 
-*<wmalms>-<1.0.0a> (03 Jun 2002)
+*wmalms-1.0.0a-r1 (6 Jun 2002) wmalms-1.0.0a-r1.ebuild :
 
-  03 Jun 2002; Brandon Low <lostlogic@gentoo.org> Initial package
+  6 Jun 2002; Brandon Low <lostlogic@gentoo.org> Fix doc locations
+
+*wmalms-1.0.0a (3 Jun 2002)
+
+  3 Jun 2002; Brandon Low <lostlogic@gentoo.org> Initial package
