--- a/app-text/chktex/ChangeLog
+++ b/app-text/chktex/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-text/chktex
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/chktex/ChangeLog,v 1.1 2002/02/01 21:53:09 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/chktex/ChangeLog,v 1.2 2002/06/07 11:06:30 danarmak Exp $
+
+*chktex-1.5-r1 (7 Jun 2002)
+
+  7 Jun 2002; Dan Armak <danarmak@gentoo.org> ChangeLog :
+  
+  Fix bug #3456 (sandbox errors).
 
 *chktex-1.5 (1 Feb 2002)
 
