--- a/net-misc/kio_fish/ChangeLog
+++ b/net-misc/kio_fish/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/kio_fish
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/kio_fish/ChangeLog,v 1.1 2002/04/20 22:13:57 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/kio_fish/ChangeLog,v 1.2 2002/06/07 14:35:11 danarmak Exp $
+
+*kio_fish-1.1.2 (7 Jun 2002)
+  
+  7 Jun 2002; Dan Armak <danarmak@gentoo.org> changelog:
+  
+  New version.
 
 *kio_fish-1.1.1 (21 Apr 2002)
   
