--- a/app-office/openoffice/ChangeLog
+++ b/app-office/openoffice/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-office/openoffice
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.2 2002/05/22 04:46:26 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.3 2002/06/07 18:16:49 azarah Exp $
+
+*openoffice-1.0.0-r1 (7 Jun 2002)
+
+  7 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Update to build with gcc-3.1.
 
 *openoffice-1.0.0 (21 May 2002)
 
