--- a/app-emulation/xmame/ChangeLog
+++ b/app-emulation/xmame/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-games/xmame
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xmame/ChangeLog,v 1.3 2002/05/27 08:35:15 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xmame/ChangeLog,v 1.4 2002/06/07 18:41:54 blackmore Exp $
+
+*xmame-0.60.1-r1 (7 Jun 2002)
+
+  7 Jun 2002; J. Perrot <blackmore@gentoo.org> xmame-0.60.1-r1.ebuild :
+
+  Check the presence of "dga" in the USE variable and do the
+  appropriate sed substitution
 
 *xmame-0.60.1 (27 May 2002)
 
