--- a/gnome-extra/libgtkhtml/ChangeLog
+++ b/gnome-extra/libgtkhtml/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/libgtkhtml
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/ChangeLog,v 1.3 2002/06/05 16:51:23 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/ChangeLog,v 1.4 2002/06/07 20:12:41 stroke Exp $
+
+*libgtkhtml-2.0.0 (07 Jun 2002)
+  New version 
 
 *libgtkhtml-1.99.9 (05 Jun 2002)
   05 Jun 2002; Spider <spider@gentoo.org> libgtkhtml-1.99.9.ebuild:
