--- a/gnome-extra/gnome-db/ChangeLog
+++ b/gnome-extra/gnome-db/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/gnome-db
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-db/ChangeLog,v 1.2 2002/03/23 00:52:28 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-db/ChangeLog,v 1.3 2002/06/07 20:43:26 azarah Exp $
+
+*gnome-db-0.2.96 (7 Jun 2002)
+
+  7 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Update version.
 
 *gnome-db-0.2.95-r2 (22 Mar 2002)
 
