--- a/net-misc/dante/ChangeLog
+++ b/net-misc/dante/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for net-misc/dante
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dante/ChangeLog,v 1.2 2002/05/01 04:38:03 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dante/ChangeLog,v 1.3 2002/06/07 20:45:48 woodchip Exp $
+
+*dante-1.1.12 (7 Jun 2002)
+
+  7 Jun 2002; Donny Davies <woodchip@gentoo.org> dante-1.1.12.ebuild,
+  dante-1.1.12-exit-code.patch, dante-1.1.12-gcc-3.1.patch,
+  dante-1.1.12-percent-in-log.patch, dante-1.1.12-pre1-pam-syslog.patch :
+
+  Updato to latest release, closing #3250 with some patches to fix
+  build issues.
 
 *dante-1.1.9-r1 (1 May 2002)
 
