--- a/x11-terms/multi-gnome-terminal/ChangeLog
+++ b/x11-terms/multi-gnome-terminal/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for x11-terms/multi-gnome-terminal
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/multi-gnome-terminal/ChangeLog,v 1.5 2002/04/28 15:00:52 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/multi-gnome-terminal/ChangeLog,v 1.6 2002/06/08 08:18:45 azarah Exp $
+
+*multi-gnome-terminal-1.5.0_rc2 (8 Jun 2002)
+
+  8 Jun 2002; M.Schlemmer <azarah@gentoo.org> :
+
+  Update version to fix bugs if ~/.gnome/MultiTerminal do not exist.
+  Thanks to the author for being so nice and adding the _beta or _rc
+  to the tarball to make our live easier!
 
 *multi-gnome-terminal-1.4.0 (28 Apr 2002)
 
