--- a/app-admin/gentoolkit/ChangeLog
+++ b/app-admin/gentoolkit/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for app-admin/gentoolkit
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/gentoolkit/ChangeLog,v 1.21 2002/06/05 02:45:30 lostlogic Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/gentoolkit/ChangeLog,v 1.22 2002/06/08 13:38:45 lostlogic Exp $
+
+*gentoolkit-0.1.11-r1 (08 Jun 2002)
+
+  08 Jun 2002: Brandon Low <lostlogic@gentoo.org> files/scripts/qpkg
+
+  More qpkg updates, -v and -vv are much more useful, -U works with 
+  the massive number of packages now in portage, which means that 
+  qpkg now actually does what it's help says it will.
+
+  Update qpkg.1 manpage with all the new qpkg workingness.
 
 *gentoolkit-0.1.11 (04 Jun 2002)
 
