--- a/net-im/gabber/ChangeLog
+++ b/net-im/gabber/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for net-im/gabber
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/gabber/ChangeLog,v 1.3 2002/04/16 01:01:28 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gabber/ChangeLog,v 1.4 2002/06/08 15:38:09 spider Exp $
 
+
+gabber-0.8.6-r1 (8 Jun 2002)
+  8 Jun 2002; Spider <spider@gentoo.org> gabber-0.8.6-r1.ebuild
+  added limits to some libraries in DEPEND
+
+  
 *gabber-0.8.6-r1 (15 Apr 2002)
 
   15 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gabber-0.8.6-r1.ebuild :
