--- a/gnome-extra/gal/ChangeLog
+++ b/gnome-extra/gal/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/gal
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gal/ChangeLog,v 1.4 2002/05/26 15:14:56 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gal/ChangeLog,v 1.5 2002/06/08 15:40:50 spider Exp $
+
+
+gal-0.19.2-r1 (8 Jun 2002) 
+  8 Jun 2002; Spider <spider@gentoo.org> :
+  update the depends for gnome-vfs as well
 
 *gal-0.19.2-r1 (26 May 2002)
 
