--- a/sys-apps/pbbuttonsd/Changelog
+++ b/sys-apps/pbbuttonsd/Changelog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/yaboot
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pbbuttonsd/Changelog,v 1.3 2002/06/04 03:12:33 gerk Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pbbuttonsd/Changelog,v 1.4 2002/06/08 16:56:46 gerk Exp $
+
+*pbbuttons-0.4.10 (Sat Jun  8 11:38:34 EST 2002); gerk <gerk@gentoo.org>:
+
+Sat Jun  8 11:38:34 EST 2002; gerk <gerk@gentoo.org>:
+	Upated for new release
 
 *pbbuttons-0.4.9-r2 (Mon Jun  3 21:39:42 EST 2002); gerk <gerk@gentoo.org>:
 
