--- a/net-misc/fags/ChangeLog
+++ b/net-misc/fags/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-misc/fags
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/fags/ChangeLog,v 1.2 2002/06/04 10:49:49 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/fags/ChangeLog,v 1.3 2002/06/08 21:57:41 seemant Exp $
+
+*fags-0.2.1 (8 Jun 2002)
+
+  8 Jun 2002; Seemant Kulleen <seemant@gentoo.org> fags-0.2.1.ebuild
+  files/digest-fags-0.2.1 :
+
+  Version bump -- and now it uses media-sound/mp3info to gather information
+  about the files.
 
 *fags-0.1.9 (4 Jun 2002)
 
