--- a/x11-libs/xosd/Changelog
+++ b/x11-libs/xosd/Changelog
@@ -1,10 +1,15 @@
 # ChangeLog for x11-libs/xosd
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# Author: José Alberto Suárez López <bass@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/xosd/Changelog,v 1.1 2002/06/04 16:11:27 bass Exp $
+# Author: Stacey Keast <slik@telusplanet.net>
+# Maintainer: José Alberto Suárez López <bass@gentoo.org>
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/xosd/Changelog,v 1.2 2002/06/09 00:37:28 bass Exp $
 
 *xosd-0.70 (04 Jun 2002)
 
   04 Jun 2002; J.Alberto Suárez L. <bass@gentoo.org> xosd-0.70.ebuild:
 
 First relase.
+
+  08 Jun 2002; J.Alberto Suárez L. <bass@gentoo.org> xosd-0.70.ebuild:
+
+split xmms plugin to xmms-xosd.
