--- a/net-www/galeon/ChangeLog
+++ b/net-www/galeon/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-www/galeon
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/galeon/ChangeLog,v 1.14 2002/06/06 20:16:22 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/galeon/ChangeLog,v 1.15 2002/06/09 02:27:01 rphillips Exp $
+
+*galeon-1.2.5.ebuild (08 Jun 2002)
+  08 Jun 2002; Ryan Phillips <rphillips@gentoo.org> :
+  Version rev.  Based off of galeon-1.2.3-r2.ebuild
 
 *galeon-1.2.3-r2.ebuild (06 Jun 2002)
   06 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
