--- a/sys-apps/pcmcia-cs/ChangeLog
+++ b/sys-apps/pcmcia-cs/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/pcmcia-cs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.11 2002/05/01 13:01:29 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.12 2002/06/09 06:21:25 gerk Exp $
+
+*pcmcia-cs-3.1.33-r5 (09 June 2002)
+
+  08 June 2002; Mark Guertin <gerk@gentoo.org>
+
+  Added ppc fixes to this ebuild.  Left new orinoco driver section in (but commented as it is still testing)
+
 
 *pcmcia-cs-3.1.33-r4 (01 May 2002)
 
