--- a/net-www/w3m/ChangeLog
+++ b/net-www/w3m/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for net-www/w3m
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/w3m/ChangeLog,v 1.3 2002/05/03 13:08:17 pvdabeel Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/w3m/ChangeLog,v 1.4 2002/06/09 07:34:26 naz Exp $
+
+
+*w3m-0.3-r2 (07 Jun 2002)
+
+    07 Jun 2002; Michael Nazaroff <naz@gentoo.org> w3m-0.3-r2.ebuild:
+
+	Updated the ebuild and changed to the Customize configure option so I
+	could add a gpm use variable to the ebuild. This takes care of bug 3264.
+           
 
 *w3m-0.3-r1, w3m-0.2.2-r1 (03 May 2002)
 
