--- a/net-mail/evolution/ChangeLog
+++ b/net-mail/evolution/ChangeLog
@@ -1,7 +1,14 @@
 # ChangeLog for net-mail/evolution
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/evolution/ChangeLog,v 1.15 2002/05/13 22:24:47 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/evolution/ChangeLog,v 1.16 2002/06/09 13:16:27 stroke Exp $
 
+*evolution-1.0.5-r1 (08 Jun 2002)
+  
+  08 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> evolution-1.0.5-1.ebuild :
+
+  Updated dependencies. Changed deps to work even if gnome2 is unmasked.
+  Also this should Close/Fixe bug #3444
+ 
 *evolution-1.0.5 (13 May 2002)
 
   13 May 2002; Martin Schlemmer <azarah@gentoo.org> evolution-1.0.5.ebuild :
