--- a/net-mail/sylpheed/ChangeLog
+++ b/net-mail/sylpheed/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/sylpheed
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/sylpheed/ChangeLog,v 1.6 2002/05/12 14:54:16 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/sylpheed/ChangeLog,v 1.7 2002/06/09 18:28:22 stroke Exp $
+
+*sylpheed-0.7.7 (09 Jun 2002)
+  
+  09 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> sylpheed-0.7.7.ebuild:
+  
+  Version bump
 
 *sylpheed-0.7.6 (12 May 2002)
   12 May 2002; Spider <spider@gentoo.org> sylpheed-0.7.6.ebuild: 
