--- a/dev-lang/nhc98/ChangeLog
+++ b/dev-lang/nhc98/ChangeLog
@@ -1,8 +1,13 @@
 # ChangeLog for dev-lang/nhc98
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/nhc98/ChangeLog,v 1.1 2002/06/09 07:38:07 george Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/nhc98/ChangeLog,v 1.2 2002/06/09 22:06:03 george Exp $
 
 *nhc98-1.12.ebuild (08 Jun 2002)
+  
+  09 Jun 2002; George Shapovalov <george@gentoo.org> files/hmakerc, nhc98-1.12.ebuild :
+
+  updated ebuild to install aproperiate config file
+  (configure that ships with package produces weird setup)
 
   08 Jun 2002; George Shapovalov <george@gentoo.org> all :
   
