--- a/app-misc/gtk-theme-switch/Changelog
+++ b/app-misc/gtk-theme-switch/Changelog
@@ -1,7 +1,15 @@
 # ChangeLog for app-misc/gtk-theme-switch
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
 # AUTHOR: José Alberto Suárez López <bass@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gtk-theme-switch/Changelog,v 1.3 2002/06/01 08:47:01 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gtk-theme-switch/Changelog,v 1.4 2002/06/09 23:14:37 seemant Exp $
+
+
+*gtk-theme-switch-2.0.0_rc2 (9 Jun 2002)
+
+  9 Jun 2002; Seemant Kulleen <seemant@gentoo.org>
+  gtk-theme-switch-2.0.0_rc2.ebuild files/digest-gtk-theme-switch-2.0.0_rc2:
+
+  This is designed to work with GTK+-2 themes
 
 *gtk-theme-switch-1.0.1 (06 may 2002)
 
