--- a/app-text/gnome-spell/ChangeLog
+++ b/app-text/gnome-spell/ChangeLog
@@ -1,8 +1,13 @@
 # ChangeLog for app-text/gnome-spell
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-spell/ChangeLog,v 1.5 2002/05/23 02:02:12 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-spell/ChangeLog,v 1.6 2002/06/10 00:22:58 stroke Exp $
 
-gnome-spell-1.0_pre1 (22 May 2002)
+*gnome-spell-1.0pre1 (10 Jun 2002)
+ 10 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> gnome-spell-1.0_pre1.ebuild :
+ Looks like gnome-spell for gnome2 is pretty dead. So according with
+ Spider I just removed its gnome2 related ebuilds.
+
+*gnome-spell-1.0_pre1 (22 May 2002)
   22 May 2002; Spider <spider@gentoo.org> gnome-spell-1.0_pre1.ebuild : 
   removed some faulty deps
 
