Updated deps to match with the new location of libgnomeprint and libgnomeprintui.

--- a/net-mail/balsa/ChangeLog
+++ b/net-mail/balsa/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-mail/balsa
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.13 2002/06/02 22:31:40 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.14 2002/06/10 00:32:22 stroke Exp $
+
+balsa-2.0.0_pre1-r1 (10 June 2002)
+  10 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> balsa-2.0.0_pre1-r1.ebuild :
+  Changed deps to match with the new location of libgnomeprint and libgnomeprintui 
+  (in gnome-base actually)
 
 balsa-2.0.0_pre1 (3 June 2002)
   3 June 2002; Gabriele Giorgetti <stroke@gentoo.org> balsa-2.0.0_pre1.ebuild :
