--- a/app-sci/xdrawchem/ChangeLog
+++ b/app-sci/xdrawchem/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-sci/xdrawchem
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-sci/xdrawchem/ChangeLog,v 1.2 2002/06/01 08:14:56 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/xdrawchem/ChangeLog,v 1.3 2002/06/10 00:55:49 rphillips Exp $
+
+*xdrawchem-1.3.2 (09 June 2002)
+
+  09 June 2002; Ryan Phillips <rphillips@gentoo.org> xdrawchem-1.3.2.ebuild:
+
+  Updated version. Fixes #3494
 
 *xdrawchem-1.2 (1 June 2002)
 
