--- a/net-mail/sylpheed/ChangeLog
+++ b/net-mail/sylpheed/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for net-mail/sylpheed
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/sylpheed/ChangeLog,v 1.7 2002/06/09 18:28:22 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/sylpheed/ChangeLog,v 1.8 2002/06/10 01:07:29 rphillips Exp $
 
+*sylpheed-0.7.7-r1 (09 Jun 2002)
+  
+  09 Jun 2002; Ryan Phillips <rphillips@gentoo.org> sylpheed-0.7.7-r1.ebuild:
+  
+  Added support for ldap USE variable
+  
 *sylpheed-0.7.7 (09 Jun 2002)
   
   09 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> sylpheed-0.7.7.ebuild:
