--- a/x11-terms/multi-gnome-terminal/ChangeLog
+++ b/x11-terms/multi-gnome-terminal/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-terms/multi-gnome-terminal
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/multi-gnome-terminal/ChangeLog,v 1.6 2002/06/08 08:18:45 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/multi-gnome-terminal/ChangeLog,v 1.7 2002/06/10 06:28:39 azarah Exp $
+
+*multi-gnome-terminal-1.5.0_rc4 (10 Jun 2002)
+
+  10 Jun 2002; M.Schlemmer <azarah@gentoo.org> :
+
+  Version update.
 
 *multi-gnome-terminal-1.5.0_rc2 (8 Jun 2002)
 
