--- a/media-video/drip/ChangeLog
+++ b/media-video/drip/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-video/drip
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/drip/ChangeLog,v 1.6 2002/05/27 19:44:17 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/drip/ChangeLog,v 1.7 2002/06/10 16:36:56 lostlogic Exp $
+
+*drip-0.8.1-r5 (10 Jun 2002)
+
+  10 Jun 2002; Brandon Low <lostlogic@gentoo.org> drip-0.8.1-r5.ebuild :
+
+  Fix compile on gcc-3.1 (1-line patch).
 
 *drip-0.8.1-r4 (27 May 2002)
 
