--- a/app-admin/kebuildpart/ChangeLog
+++ b/app-admin/kebuildpart/ChangeLog
@@ -1,8 +1,14 @@
 # ChangeLog for app-admin/kebuildpart
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/kebuildpart/ChangeLog,v 1.1 2002/04/17 18:43:08 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/kebuildpart/ChangeLog,v 1.2 2002/06/10 19:11:15 wmertens Exp $
 
-* kebuildpart-02 (1 Feb 2002)
+* kebuildpart-0.3 (10 Jun 2002)
+
+  10 Jun 2002; Wout Mertens <wmertens@gentoo.org>:
+
+  Bumped to new version; this one supports kdesu.
+
+* kebuildpart-0.2 (01 Feb 2002)
 
   17 April 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :
   
