--- a/kde-base/kdebase/ChangeLog
+++ b/kde-base/kdebase/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdebase
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.14 2002/05/26 16:23:53 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.15 2002/06/10 19:56:11 danarmak Exp $
+
+  10 Jun 2002; Dan Armak <danarmak@gentoo.org> changelog:
+  
+  Fix the startkde patch to be correct for the global case of any $KDEDIR.
 
 *kdebase-3.0.1 (24 May 2002)
 
