--- a/app-misc/gtk-theme-switch/Changelog
+++ b/app-misc/gtk-theme-switch/Changelog
@@ -1,7 +1,7 @@
 # ChangeLog for app-misc/gtk-theme-switch
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
 # AUTHOR: José Alberto Suárez López <bass@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gtk-theme-switch/Changelog,v 1.4 2002/06/09 23:14:37 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gtk-theme-switch/Changelog,v 1.5 2002/06/10 23:43:16 bass Exp $
 
 
 *gtk-theme-switch-2.0.0_rc2 (9 Jun 2002)
@@ -12,6 +12,10 @@
   This is designed to work with GTK+-2 themes
 
 *gtk-theme-switch-1.0.1 (06 may 2002)
+
+  11 Jun 2002; J. Alberto Suárez L. <bass@gentoo.org> gtk-theme-switch-1.0.1.ebuild:
+
+  added doc
 
   01 Jun 2002; Bruce A. Locke <blocke@shivan.org> gtk-theme-switch-1.0.1.ebuild:
 
