--- a/net-www/links/ChangeLog
+++ b/net-www/links/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-www/links
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/links/ChangeLog,v 1.6 2002/06/05 02:01:58 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/links/ChangeLog,v 1.7 2002/06/11 09:49:25 seemant Exp $
+
+*links-2.0 (11 Jun 2002)
+
+  11 Jun 2002; Seemant Kulleen <seemant@gentoo.org> links-2.0.ebuild
+  files/digest-links-2.0 :
+
+  Version bump to final release.
 
 *links-2.0_pre6 (4 Jun 2002)
 
