--- a/gnome-base/eel/ChangeLog
+++ b/gnome-base/eel/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/eel
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/ChangeLog,v 1.9 2002/06/05 12:49:00 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/ChangeLog,v 1.10 2002/06/11 10:43:32 stroke Exp $
+
+*eel-2.0.0 (11 June 2002)
+
+  11 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> eel-2.0.0.ebuild:
+  
+  New version
 
 *eel-1.1.17 (05 June 2002)
 
