--- a/gnome-base/gail/ChangeLog
+++ b/gnome-base/gail/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/gail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gail/ChangeLog,v 1.3 2002/06/05 22:33:52 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gail/ChangeLog,v 1.4 2002/06/11 18:15:37 spider Exp $
+
+
+*gail-0.16 (10 Jun 2002)
+  10 Jun 2002; Spider <spider@gentoo.org> gail-0.16.ebuild :
+  The dont-fuckup-portage release. 
+
 
 *gail-0.15 (06 Jun 2002)
   
