--- a/kde-base/kdeaddons/ChangeLog
+++ b/kde-base/kdeaddons/ChangeLog
@@ -1,10 +1,18 @@
 # ChangeLog for kde-base/kdeaddons
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.5 2002/06/10 19:56:29 danarmak Exp $
-
-  10 Jun 2002; Dan Armak <danarmak@gentoo.org> changelog:
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.6 2002/06/11 18:43:47 danarmak Exp $
   
+  10 Jun 2002; Dan Armak <danarmak@gentoo.org> changelog:
+
   Add missing svgalib dep, close bug #3104.
+
+*kdeaddons-3.0.1.20020604 (4 Jun 2002)
+
+  4 Jun 2002; Dan Armak <danarmak@gentoo.org> Changelog :
+
+  This is a snapshot of the KDE CVS's KDE_3_0_x branch from June 6th.
+  This branch contains only bugfixes to the 3.0 release (the 3.0.1 release
+  was also of this kind).
 
 *kdeaddons-3.0.1 (24 May 2002)
 
