--- a/kde-base/kdemultimedia/ChangeLog
+++ b/kde-base/kdemultimedia/ChangeLog
@@ -1,10 +1,18 @@
 # ChangeLog for kde-base/kdemultimedia
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.7 2002/06/10 19:56:23 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.8 2002/06/11 18:43:47 danarmak Exp $
 
   10 Jun 2002; Dan Armak <danarmak@gentoo.org> changelog:
-  
+
   Pass the correct parameters to configure to enable it to find NAS.
+
+*kdemultimedia-3.0.1.20020604 (4 Jun 2002)
+
+  4 Jun 2002; Dan Armak <danarmak@gentoo.org> Changelog :
+
+  This is a snapshot of the KDE CVS's KDE_3_0_x branch from June 6th.
+  This branch contains only bugfixes to the 3.0 release (the 3.0.1 release
+  was also of this kind).
 
 *kdemultimedia-3.0.1 (24 May 2002)
 
