--- a/app-emulation/winesetuptk/ChangeLog
+++ b/app-emulation/winesetuptk/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-emulation/winesetuptk
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/winesetuptk/ChangeLog,v 1.2 2002/04/27 01:28:47 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/winesetuptk/ChangeLog,v 1.3 2002/06/12 11:13:19 seemant Exp $
+
+*winesetuptk-0.6.0b-r2 (12 Jun 2002)
+
+  12 Jun 2002; Seemant Kulleen <seemant@gentoo.org>
+  winsetuptk-0.6.0b-r2.ebuild files/digest-winesetuptk-0.6.0b-r2 :
+
+  Removed wine from RDEPEND, as this package can really run without
+  wine/winex, though it is useles.
 
 *winesetuptk-0.6.0b-r1 (26 Apr 2002)
 
