--- a/net-mail/sendmail/ChangeLog
+++ b/net-mail/sendmail/ChangeLog
@@ -1,12 +1,21 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/sendmail/ChangeLog,v 1.1 2002/06/10 01:03:48 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/sendmail/ChangeLog,v 1.2 2002/06/12 19:19:11 g2boojum Exp $
 
-*<PACKAGE_NAME>-<PACKAGE_VERSION>-<PACKAGE_RELEASE> (DD MMM YYYY)
+*sendmail-8.12.4-r1 (12 June 2002)
 
-  01 Feb 2002; G.Bevin <gbevin@gentoo.org> skel.ChangeLog: This changelog is
-  targetted to users. This means that the comments should be well explained and
-  written in clean English. 
+  12 June 2002; Grant Goodyear <g2boojum@gentoo.org> : 
+
+  Added an init script and fixed permissions.  It now
+  works out-of-the-box, at least for sending mail and
+  locally receiving mail.  Currently set up to use it's
+  own local mailer.
+ 
+*sendmail-8.12.4 (10 June 2002)
+
+  10 June 2002; Grant Goodyear <g2boojum@gentoo.org> : 
+
+  New package.
  
 -- Explanation of ChangeLog format:
  
