--- a/net-mail/squirrelmail/ChangeLog
+++ b/net-mail/squirrelmail/ChangeLog
@@ -1,7 +1,15 @@
 # ChangeLog for net-mail/squirrelmail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/squirrelmail/ChangeLog,v 1.3 2002/05/21 22:03:34 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/squirrelmail/ChangeLog,v 1.4 2002/06/12 19:27:53 g2boojum Exp $
 
+*squirrelmail-1.2.6-r1 (12 June 2002)
+
+  12 June 2002; Grant Goodyear <g2boojum@gentoo.org> :
+
+  Fixed postisnt message to mention /etc/php4/php.ini, not
+  /etc/PHP4/php.ini.  Thanks to Roman Weber.
+
+  
 *squirrelmail-1.2.6 (21 May 2002)
 
   21 May 2002; Grant Goodyear <g2boojum@gentoo.org> :
