--- a/net-im/gaim/ChangeLog
+++ b/net-im/gaim/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-im/gaim
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/ChangeLog,v 1.14 2002/05/17 04:45:51 blocke Exp $
+# $ Header: $
+
+*gaim-0.58-r1 (12 June 2002)
+
+ 12 June 2002; Michael J. Cohen <mjc@gentoo.org> gaim-0.58-r2.ebuild :
+
+ Transparency support added. Thanks ChipX86 in #gaim.  Careful, the patch -p0
+ is commented out because currently it segfaults often.
 
 
 *gaim-0.58-r1 (17 May 2002)
