--- a/app-emulation/xmame/ChangeLog
+++ b/app-emulation/xmame/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-games/xmame
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xmame/ChangeLog,v 1.4 2002/06/07 18:41:54 blackmore Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xmame/ChangeLog,v 1.5 2002/06/13 15:55:32 daybird Exp $
+
+*xmame-0.60.1-r2 (13 June 2002)
+
+  13 June 2002; David Chamberlain <daybird@gentoo.org> xmame-0.60.1-r2.ebuild
+
+  This ebuild provides ppc fixes to makefile
 
 *xmame-0.60.1-r1 (7 Jun 2002)
 
