--- a/x11-misc/asapm/ChangeLog
+++ b/x11-misc/asapm/ChangeLog
@@ -1,6 +1,6 @@
-# ChangeLog for x11-wm/asapm
+# ChangeLog for x11-misc/asapm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/asapm/ChangeLog,v 1.1 2002/06/19 14:36:12 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/asapm/ChangeLog,v 1.2 2002/06/19 14:38:44 karltk Exp $
 
 *asapm-2.11 (12 Apr 2002)
 
